platform-services/ai-gateway/tests/snapshots/integration__messages__missing-key.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  status: 401
  body:
    error:
      message: missing or malformed Authorization header
      type: ai_gateway_error
upstream_requests: []
