platform-services/ai-gateway/tests/snapshots/integration__messages__model-denied.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  status: 403
  body:
    error:
      message: model claude-fable-5 is denied by config
      type: ai_gateway_error
upstream_requests: []
