platform-services/ai-gateway/tests/snapshots/integration__messages__model-not-allowed.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  status: 403
  body:
    error:
      message: key it-messages__model-not-allowed is not allowed to use model claude-fable-5
      type: ai_gateway_error
upstream_requests: []
