platform-services/ai-gateway/tests/snapshots/integration__messages__streaming-openai-provider.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  status: 200
  body:
    - message:
        content: []
        id: "[id]"
        model: gpt-4o
        role: assistant
        stop_reason: ~
        stop_sequence: ~
        type: message
        usage:
          cache_creation_input_tokens: 0
          cache_read_input_tokens: 0
          cached_tokens: 0
          input_tokens: 0
          output_tokens: 0
          reasoning_tokens: 0
      type: message_start
    - content_block:
        text: ""
        type: text
      index: 0
      type: content_block_start
    - delta:
        text: Hi there
        type: text_delta
      index: 0
      type: content_block_delta
    - index: 0
      type: content_block_stop
    - delta:
        stop_reason: end_turn
        stop_sequence: ~
      type: message_delta
      usage:
        cache_creation_input_tokens: 0
        cache_read_input_tokens: 0
        output_tokens: 2
    - type: message_stop
upstream_requests:
  - method: POST
    path: /chat/completions
    body:
      max_tokens: 64
      messages:
        - content: hello
          role: user
      model: gpt-4o
      stream: true
